src/test/ui/libstd-case-typo/ascii.rs
// checks case typos with libstd::ascii structs
fn main(){}

fn test_escdef(_x: Escapedefault){}
//~^ ERROR: cannot find type `Escapedefault` in this scope
